--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "your-name-here/CakeElements",
+    "name": "mtkocak/CakeElements",
     "description": "CakeElements plugin for CakePHP",
     "type": "cakephp-plugin",
+    "homepage": "http://github.com/mtkocak/cake-elements",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.1",
+        "cakephp/cakephp": "~3.0",
         "knplabs/github-api": "~1.4"
     },
     "require-dev": {
