--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mtkocak/CakeElements",
+    "name": "mtkocak/cake-elements",
     "description": "CakeElements plugin for CakePHP",
     "type": "cakephp-plugin",
     "homepage": "http://github.com/mtkocak/cake-elements",
